# recipe-tracker

./: Cargo.toml  tests.http
.cargo/: config.toml
.sqlx/: query-1cdd1a844e425f760dfebeb0be131c5bd8c941785577672fa09c6cfc26097638.json  query-55dedb10a21ea8138e0de227b295c37254e3c6dc20c07d7f4ca397e26f5b73d5.json  query-b22f10136246335cb21208ae3c587ae93f170922f1ab9ed32e669ebbcb3c1fae.json
migrations/: 20240106131619_add_recipes_table.sql
src/: main.rs
src/infra/queries/: create_recipe_book.sql  create_recipe_book_url.sql  create_recipe_url.sql
src/infra/repository/: mod.rs
src/infra/service/: mod.rs
src/models/: mod.rs
src/models/recipe/: mod.rs
src/routes/: mod.rs
